bugfix(FCL-2079): Fix markdown on small screens

--- a/styles/app.css
+++ b/styles/app.css
@@ -70,11 +70,13 @@ body {
 
   .markdown {
     @apply max-w-none overflow-x-hidden;
-    @apply lg:prose-lg text-neutral-800 mx-auto pb-10 prose-h2:text-neutral-800  prose-h3:text-neutral-800 prose-h4:text-neutral-800;
-    @apply prose-blockquote:text-neutral-700 prose-a:text-accent-600;
-    @apply prose-code:text-accent-600 prose-code:bg-neutral-200 prose-pre:bg-neutral-200 prose-code:p-1 prose-code:rounded;
+    @apply mx-auto pb-10 text-neutral-800 prose-h1:text-neutral-800 prose-h2:text-neutral-800 prose-h3:text-neutral-800 prose-h4:text-neutral-800 lg:prose-lg;
+    @apply prose-a:text-accent-600 prose-blockquote:text-neutral-700;
+    @apply prose-code:rounded prose-code:bg-neutral-200 prose-code:p-1 prose-code:text-accent-600 prose-pre:bg-neutral-200;
     @apply prose-img:rounded-sm;
     @apply prose-strong:font-bold prose-strong:text-neutral-800;
-    @apply prose-li:list-disc prose-li:text-neutral-800
+    @apply prose-ol:list-decimal;
+    @apply prose-ul:list-disc;
+    @apply prose-li:text-neutral-800;
   }
 }
